# frozen_string_literal: true
require_relative 'input_student_window'
require_relative '../controller/add_student_controller'

class Add_student_window < InputStudentWindow
  def initialize(p)
    super(p)
  end
end
