# frozen_string_literal: true
require_relative 'add_student_window'
require_relative 'edit_student_contacts_window'
require_relative 'edit_student_git_window'
require_relative 'edit_student_name_window'

class Input_student_window_fabric
  private_class_method :new

  def self.create

  end
end
